# lumina-video

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  FLUTTER_AGENTS.md  LICENSE-APACHE  LICENSE-MIT  MOQ_BEST_PRACTICES.md  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml  links.yml  package-gstreamer.yml  release-android.yml  release-linux.yml  release-macos.yml
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  local.properties.template  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/luminavideo/demo/: MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/mipmap-hdpi/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
android/app/src/main/res/values-v28/: styles.xml
android/lumina-video-bridge/: build.gradle.kts
android/lumina-video-bridge/src/main/java/com/luminavideo/bridge/: ExoPlayerBridge.kt  LuminaVideo.kt  MoqMediaCodecBridge.kt
crates/lumina-video/: Cargo.toml  MOQ_PIXELATION_ANALYSIS.md  README.md  build.rs
crates/lumina-video-android/: Cargo.toml
crates/lumina-video-android/src/: lib.rs
crates/lumina-video-core/: Cargo.toml
crates/lumina-video-core/src/: android_video.rs  android_vulkan.rs  audio.rs  audio_decoder.rs  audio_ring_buffer.rs  frame_queue.rs  lib.rs  linux_video.rs  linux_video_gst.rs  macos_video.rs  ndk_image_reader.rs  network.rs  player.rs  video.rs  video_decoder.rs  windows_audio.rs  windows_video.rs  zero_copy.rs
crates/lumina-video-core/src/shaders/: blit.vert  blit.vert.spv  ycbcr_blit.frag  yuv_fullscreen.vert  yuv_to_rgb.frag  yuv_to_rgb.spv
crates/lumina-video-demo/: Cargo.toml
crates/lumina-video-demo/src/: main.rs
crates/lumina-video-ios/: Cargo.toml
crates/lumina-video-ios/src/: diagnostics.rs  error.rs  handle.rs  lib.rs  safety.rs
crates/lumina-video-ios/tests/: ffi_conformance.rs
crates/lumina-video-web-demo/: .gitignore  Cargo.toml  Trunk.toml  esbuild-moq.mjs  index.html  moq-audio-worklet.js  moq-bundle-entry.js  package.json
crates/lumina-video-web-demo/src/: main.rs
crates/lumina-video/docs/: duf-moq-video-debug-history.md
crates/lumina-video/examples/: sync_baseline.rs
crates/lumina-video/src/: lib.rs  vendored_runtime.rs
crates/lumina-video/src/media/: NATIVE_AV_SYNC.md  android_video.rs  android_vulkan.rs  audio.rs  audio_decoder.rs  audio_ring_buffer.rs  frame_queue.rs  linux_video.rs  linux_video_gst.rs  macos_video.rs  mod.rs  moq_audio.rs  moq_decoder.rs  ndk_image_reader.rs  nostr_discovery.rs  subtitles.rs  sync_metrics.rs  triple_buffer.rs  video.rs  video.wgsl  video_controls.rs  video_decoder.rs  video_player.rs  video_texture.rs  web_moq_decoder.rs  web_video.rs  windows_audio.rs  windows_video.rs  zero_copy.rs
crates/lumina-video/src/media/moq/: catalog.rs  error.rs  media_source.rs  mod.rs  subscriber.rs  transport.rs  url.rs  worker.rs
crates/lumina-video/src/media/moq_decoder/: android.rs  desktop.rs  linux_gst.rs  macos_vt.rs  mod.rs
crates/lumina-video/src/media/shaders/: ycbcr_blit.frag.spv
crates/lumina-video/tests/: av_sync_test.rs  reexport_test.rs
crates/lumina-video/web/: moq-audio-worklet.js  moq-bridge.js  moq-transport-bridge.js  video-bridge.js
docs/: ANDROID.md  AV-SYNC.md  IOS.md  MOQ_BEST_PRACTICES.md  PLATFORMS.md  PROBLEM-MOQ-DECODER-CORRUPTION.md  VULKAN-REFERENCE.md  ZERO-COPY.md  ios-ffi-contract.md  ios-foundation-plan.md
flatpak/: io.github.lumina_video.Demo.yml
include/: LuminaVideo.h
ios/lumina-video-bridge/: Package.swift
ios/lumina-video-bridge/CHeaders/: shim.c
ios/lumina-video-bridge/CHeaders/include/: LuminaVideo.h
ios/lumina-video-bridge/Sources/LuminaVideoBridge/: LuminaDiagnostics.swift  LuminaVideoError.swift  LuminaVideoFrame.swift  LuminaVideoPlayer.swift  LuminaVideoPlayerDelegate.swift  LuminaVideoState.swift
ios/test-harness/: .gitignore  project.yml
ios/test-harness/LuminaTestHarness/: App.swift  ContentView.swift  MetalVideoUIView.swift  MetalVideoView.swift  Shaders.metal
packaging/aur/: PKGBUILD
packaging/debian/: changelog  control  copyright  rules
packaging/rpm/: lumina-video-demo.spec
scripts/: build-ios.sh  fetch-vendor-libs.sh  generate-android-icons.sh  setup-macos-ffmpeg.sh
tests/ios-smoke-test/CpalSmokeTest/CpalSmokeTest/: ContentView.swift  CpalSmokeTest-Bridging-Header.h  CpalSmokeTestApp.swift
tests/ios-smoke-test/CpalSmokeTest/CpalSmokeTest.xcodeproj/: project.pbxproj
tests/ios-smoke-test/CpalSmokeTest/CpalSmokeTest.xcodeproj/project.xcworkspace/xcuserdata/e.xcuserdatad/: UserInterfaceState.xcuserstate
tests/ios-smoke-test/CpalSmokeTest/CpalSmokeTest.xcodeproj/xcuserdata/e.xcuserdatad/xcschemes/: xcschememanagement.plist
