[package]
name = "lumina-video-core"
version = { workspace = true }
edition = "2021"
description = "Core video decode and zero-copy pipeline for lumina-video (egui-free)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lumina-video/lumina-video"
keywords = ["video", "multimedia", "hardware-acceleration", "zero-copy"]
categories = ["multimedia", "rendering"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2.5"

# Android native decoder + zero-copy
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["game-activity"] }
ash = { version = "0.38" }
cpal = { workspace = true }
jni = { workspace = true }
libc = { version = "0.2" }
ndk = { version = "0.9", features = ["api-level-26", "media"] }
ndk-context = "0.1"
ndk-sys = { version = "0.6" }
opus = { workspace = true }
symphonia-codec-aac = { workspace = true }
symphonia-core = { workspace = true }
webpki-roots = { workspace = true }
wgpu = { version = "24" }
wgpu-hal = { version = "24", features = ["vulkan"] }

# Linux GStreamer-based video decoder + zero-copy
[target.'cfg(target_os = "linux")'.dependencies]
ash = { version = "0.38" }
cpal = { workspace = true }
drm-fourcc = { version = "2.2" }
gstreamer = { version = "0.24" }
gstreamer-allocators = { version = "0.24" }
gstreamer-app = { version = "0.24", features = ["v1_24"] }
gstreamer-video = { version = "0.24" }
libc = { version = "0.2" }
opus = { workspace = true }
symphonia-codec-aac = { workspace = true }
symphonia-core = { workspace = true }
wgpu = { version = "24", features = ["vulkan-portability"] }

# macOS native AVFoundation/VideoToolbox decoder + zero-copy
[target.'cfg(target_os = "macos")'.dependencies]
block2 = { workspace = true }
cpal = { workspace = true }
ffmpeg-next = { workspace = true }
metal = { workspace = true }
objc2 = { workspace = true }
objc2-av-foundation = { workspace = true }
objc2-core-foundation = { version = "0.3", features = ["CFNumber", "CFDictionary", "CFString"] }
objc2-core-media = { workspace = true }
objc2-core-video = { workspace = true }
objc2-foundation = { workspace = true }
objc2-video-toolbox = { workspace = true }
opus = { workspace = true }
profiling = { version = "1.0" }
symphonia-codec-aac = { workspace = true }
symphonia-core = { workspace = true }
wgpu = { version = "24" }

# iOS native AVFoundation/VideoToolbox decoder + zero-copy (shared Apple frameworks)
[target.'cfg(target_os = "ios")'.dependencies]
block2 = { workspace = true }
cpal = { workspace = true }
dispatch2 = "0.3"
metal = { workspace = true }
objc2 = { workspace = true }
objc2-av-foundation = { workspace = true }
objc2-core-foundation = { version = "0.3", features = ["CFNumber", "CFDictionary", "CFString"] }
objc2-core-media = { workspace = true }
objc2-core-video = { workspace = true }
objc2-foundation = { workspace = true }
objc2-video-toolbox = { workspace = true }
profiling = { version = "1.0" }
wgpu = { version = "24" }

# Windows native Media Foundation decoder
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
    "Win32_Security",
], optional = true }
rodio = { version = "0.21", default-features = false, features = ["playback", "symphonia-all"], optional = true }

# Native-only dependencies (not available on wasm32)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossbeam-channel = "0.5"
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { workspace = true }
hyper-util = { workspace = true }
parking_lot = { workspace = true }
poll-promise = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }

[features]
default = []
vendored-runtime = []
windows-native-video = ["windows", "rodio"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"cargo-clippy\"))"] }
